syntax="proto3";


package admin;

option go_package =".";

message PaginationQuery {
  int32 size = 1;
  int32 page = 2;
  string orderBy = 3;
}

message User {
  string ID = 1;
  string Username = 2;
  string Password = 3;
  string Role = 4;
  string CreatedAt = 5;
  string UpdatedAt = 6;
  string DeletedAt = 7;
  bool Verified = 8;
}

message UserList {
  int32 total_count = 1;
  int32 total_pages = 2;
  int32 page = 3;
  int32 size = 4;
  bool has_more = 5;
  repeated User users = 6;
}

message ErrorResponse {
    string Error_message=1;
}

service UserService {
  rpc GetUserList (PaginationQuery) returns (UserList);
  rpc CreateUser (User) returns (ErrorResponse){}

}


